@startuml ER_Part09_Store
title Часть 9. Интернет-магазин
hide circle
skinparam linetype ortho
skinparam shadowing false
top to bottom direction

entity "Users" {
  RowId *
  Login
  Password
  Description
  Email
  BirthDate
  Phone
  CreatedAt
}

entity "StoreOrders" {
  RowId *
  UserId
  PickupPointId
  OrderNumber
  Status
  TotalAmount
  QrPayload
  CreatedAt
  PaidAt
}

entity "StoreOrderLines" {
  RowId *
  OrderId
  ProductId
  ProductName
  Category
  Quantity
  UnitPrice
  SortOrder
}

entity "OrderPickupPoints" {
  RowId *
  Code
  Name
  District
  AddressLine
  City
  Latitude
  Longitude
  SortOrder
  IsActive
  CreatedAt
}

entity "Parts" {
  RowId *
  Name
  Article
  PartManufacturerId
  ColorId
  StatusId
  Description
}

StoreOrders }o--|| Users : UserId
StoreOrders }o--|| OrderPickupPoints : PickupPointId
StoreOrderLines }o--|| Parts : ProductId
StoreOrderLines }o--|| StoreOrders : OrderId
@enduml
